# geompack

./: CMakeLists.txt  README.md  docs.md  fpm.toml  index.html  search.html
.github/workflows/: cmake.yml  doc-deployment.yml  fpm.yml
doc/: index.html
doc/interface/: lrline.html  perm_inverse.html  points_hull_2d.html  quad_convex_random.html  r8tris2.html
doc/lists/: files.html  modules.html  procedures.html
doc/module/: geompack.html
doc/proc/: diaedg.html  i4_swap.html  i4_wrap.html  i4mat_transpose_print_some.html  i4vec_sort_heap_a.html  i4vec_sorted_unique.html  lrline.html  perm_check.html  perm_inverse.html  points_hull_2d.html  r82vec_part_quick_a.html  r82vec_sort_quick_a.html  r8_acos.html  r8mat_transpose_print.html  r8mat_uniform_01.html  r8tris2.html  r8vec_eq.html  r8vec_gt.html  r8vec_print.html  swapec.html  triangle_circumcenter_2d.html  triangulation_order3_print.html  vbedg.html
doc/sourcefile/: geompack.f90.html  i4_modp.f90.html  i4vec_heap_d.f90.html  lrline.f90.html  perm_inverse.f90.html  points_delaunay_naive_2d.f90.html  quad_convex_random.f90.html  r82vec_part_quick_a.f90.html  r82vec_permute.f90.html  r82vec_sort_heap_index_a.f90.html  r8mat_transpose_print_some.f90.html  r8mat_uniform_01.f90.html  timestamp.f90.html  triangulation_order3_plot.f90.html  triangulation_order3_print.f90.html
doc/src/: alpha_measure.f90  diaedg.f90  i4_wrap.f90  i4mat_transpose_print.f90  perm_check.f90  points_hull_2d.f90  r82vec_permute.f90  r82vec_sort_heap_index_a.f90  r8_acos.f90  r8mat_transpose_print_some.f90  r8mat_uniform_01.f90  r8tris2.f90  r8vec_print.f90  swapec.f90  triangulation_order3_plot.f90  triangulation_order3_print.f90  vbedg.f90
install/: geompackConfig.cmake.in  template.pc
interface/: alpha_measure.html  angle_rad_2d.html  diaedg.html  lrline.html  perm_check.html  perm_inverse.html  points_delaunay_naive_2d.html  points_hull_2d.html  quad_convex_random.html  r8tris2.html  triangle_circumcenter_2d.html
lists/: files.html  modules.html  procedures.html
module/: geompack.html
proc/: alpha_measure.html  angle_rad_2d.html  diaedg.html  get_unit.html  i4_modp.html  i4_swap.html  i4_wrap.html  i4mat_transpose_print.html  i4mat_transpose_print_some.html  i4vec_heap_d.html  i4vec_sort_heap_a.html  i4vec_sorted_unique.html  lrline.html  perm_check.html  perm_inverse.html  points_delaunay_naive_2d.html  points_hull_2d.html  quad_convex_random.html  r82vec_part_quick_a.html  r82vec_permute.html  r82vec_sort_heap_index_a.html  r82vec_sort_quick_a.html  r8_acos.html  r8mat_transpose_print.html  r8mat_transpose_print_some.html  r8mat_uniform_01.html  r8tris2.html  r8vec_eq.html  r8vec_gt.html  r8vec_lt.html  r8vec_print.html  r8vec_swap.html  swapec.html  timestamp.html  triangle_circumcenter_2d.html  triangulation_order3_plot.html  triangulation_order3_print.html  vbedg.html
sourcefile/: alpha_measure.f90.html  angle_rad_2d.f90.html  diaedg.f90.html  geompack.f90.html  get_unit.f90.html  i4_modp.f90.html  i4_swap.f90.html  i4_wrap.f90.html  i4mat_transpose_print.f90.html  i4mat_transpose_print_some.f90.html  i4vec_heap_d.f90.html  i4vec_sort_heap_a.f90.html  i4vec_sorted_unique.f90.html  lrline.f90.html  perm_check.f90.html  perm_inverse.f90.html  points_delaunay_naive_2d.f90.html  points_hull_2d.f90.html  quad_convex_random.f90.html  r82vec_part_quick_a.f90.html  r82vec_permute.f90.html  r82vec_sort_heap_index_a.f90.html  r82vec_sort_quick_a.f90.html  r8_acos.f90.html  r8mat_transpose_print.f90.html  r8mat_transpose_print_some.f90.html  r8mat_uniform_01.f90.html  r8tris2.f90.html  r8vec_eq.f90.html  r8vec_gt.f90.html  r8vec_lt.f90.html  r8vec_print.f90.html  r8vec_swap.f90.html  swapec.f90.html  timestamp.f90.html  triangle_circumcenter_2d.f90.html  triangulation_order3_plot.f90.html  triangulation_order3_print.f90.html  vbedg.f90.html
src/: CMakeLists.txt  angle_rad_2d.f90  geompack.f90  get_unit.f90  i4_modp.f90  i4_swap.f90  i4mat_transpose_print_some.f90  i4vec_heap_d.f90  i4vec_sort_heap_a.f90  i4vec_sorted_unique.f90  legacy_geompack.f90  lrline.f90  perm_inverse.f90  points_delaunay_naive_2d.f90  quad_convex_random.f90  r82vec_part_quick_a.f90  r82vec_sort_quick_a.f90  r8mat_transpose_print.f90  r8vec_eq.f90  r8vec_gt.f90  r8vec_lt.f90  r8vec_swap.f90  timestamp.f90  triangle_circumcenter_2d.f90
test/: CMakeLists.txt  geompack.f  geompack_test.f90  geompack_test_routines.f90
test/fortran_test_helper/: CMakeLists.txt
tipuesearch/: tipuesearch_content.js
